--- a/.github/workflows/Try1.yml
+++ b/.github/workflows/Try1.yml
@@ -1,80 +1,65 @@
-name: Ngrok + HAProxy + Python HTTP Tunnel
+name: Ngrok + HAProxy Proxy Tunnel
 
-on:
-  workflow_dispatch:
+on: [push]
 
 jobs:
-  http-tunnel:
+  proxy-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Python HTTP Server
-        run: |
-          sudo apt update
-          sudo apt install -y python3 haproxy curl jq
+    - name: Checkout
+      uses: actions/checkout@v3
 
-          mkdir -p ~/http-server
-          echo '<h1>HAProxy + Ngrok + Python</h1>' > ~/http-server/index.html
+    - name: Install dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y haproxy jq curl python3
 
-          # Start Python HTTP server in background
-          nohup python3 -m http.server 8080 --directory ~/http-server &
-          sleep 3
+        curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
+        echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+        sudo apt update && sudo apt install ngrok -y
+        ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
 
-      - name: Install Ngrok
-        run: |
-          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-          sudo apt update && sudo apt install ngrok -y
+    - name: Start HTTP server on port 8080
+      run: |
+        nohup python3 -m http.server 8080 > server.log 2>&1 &
 
-      - name: Start Ngrok Tunnel
-        env:
-          NGROK_AUTHTOKEN: 2eotogA5R4KDNhGM3LPPec0uk9D_5JwsdDjfp5mbogqyAUepa
-        run: |
-          ngrok config add-authtoken "$NGROK_AUTHTOKEN"
-          nohup ngrok tcp 80 > ngrok.log 2>&1 &
-          sleep 5
+    - name: Start Ngrok TCP tunnel
+      run: |
+        ngrok tcp 8080 > ngrok.log 2>&1 &
+        sleep 6
+        curl -s http://localhost:4040/api/tunnels > tunnels.json
+        TUNNEL_URL=$(jq -r .tunnels[0].public_url < tunnels.json | sed 's/tcp:\/\///')
+        HOST=$(echo $TUNNEL_URL | cut -d':' -f1)
+        PORT=$(echo $TUNNEL_URL | cut -d':' -f2)
+        echo "Ngrok Tunnel: $HOST:$PORT"
+        echo "$HOST $PORT" > ngrok_target.txt
 
-          # Extract Ngrok URL
-          NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r .tunnels[0].public_url)
-          if [ -z "$NGROK_URL" ]; then
-            echo "ERROR: Ngrok URL not found"
-            cat ngrok.log
-            exit 1
-          fi
+    - name: Configure HAProxy to tunnel to Ngrok
+      run: |
+        read HOST PORT < ngrok_target.txt
+        sudo bash -c "cat > /etc/haproxy/haproxy.cfg" <<EOF
+global
+    daemon
+    maxconn 256
 
-          echo "Ngrok Tunnel: $NGROK_URL"
-          echo $NGROK_URL | sed 's/tcp:\/\///' > ngrok_url.txt
+defaults
+    mode http
+    timeout connect 5s
+    timeout client  10s
+    timeout server  10s
 
-      - name: Configure HAProxy with Python Server
-        run: |
-          NGROK_HOST_PORT=$(cat ngrok_url.txt)
+frontend proxy-in
+    bind *:80
+    default_backend tunnel
 
-          sudo bash -c "cat > /etc/haproxy/haproxy.cfg" <<EOF
-          global
-              daemon
-              maxconn 256
+backend tunnel
+    server ngrok_proxy $HOST:$PORT
+EOF
+        sudo systemctl restart haproxy
 
-          defaults
-              mode http
-              timeout connect 5000ms
-              timeout client 50000ms
-              timeout server 50000ms
-
-          frontend http-in
-              bind *:80
-              default_backend python-server
-
-          backend python-server
-              server localserver 127.0.0.1:8080
-          EOF
-
-          sudo service haproxy restart
-
-      - name: Test Tunnel
-        run: |
-          curl -x http://localhost:80 http://localhost -L -m 10 -v || echo "Test failed"
-
-      - name: Keep Alive
-        run: |
-          while sleep 60; do echo "Running..."; done
-          
+    - name: Test HTTP proxy via Ngrok/HAProxy
+      run: |
+        echo "Testing proxy through HAProxy → Ngrok → Python HTTP Server"
+        curl -x http://localhost:80 http://localhost:8080 -m 10 -v || echo "Test failed"
+        
