--- a/.github/workflows/Try1.yml
+++ b/.github/workflows/Try1.yml
@@ -1,65 +1,57 @@
-name: Ngrok + HAProxy Proxy Tunnel
+name: Setup Ngrok Tunnel
 
-on: [push]
+on:
+  workflow_dispatch:  # Allows manual trigger of the workflow from GitHub UI
 
 jobs:
-  proxy-test:
+  setup-ngrok:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout the code
+        uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y haproxy jq curl python3
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y curl jq
 
-        curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-        echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-        sudo apt update && sudo apt install ngrok -y
-        ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+      - name: Install Ngrok
+        run: |
+          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
+          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+          sudo apt update && sudo apt install ngrok -y
 
-    - name: Start HTTP server on port 8080
-      run: |
-        nohup python3 -m http.server 8080 > server.log 2>&1 &
+      - name: Start Ngrok TCP Tunnel
+        env:
+          NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
+        run: |
+          ngrok config add-authtoken $NGROK_AUTHTOKEN
+          nohup ngrok tcp 8080 > ngrok.log 2>&1 &
+          sleep 5
 
-    - name: Start Ngrok TCP tunnel
-      run: |
-        ngrok tcp 8080 > ngrok.log 2>&1 &
-        sleep 6
-        curl -s http://localhost:4040/api/tunnels > tunnels.json
-        TUNNEL_URL=$(jq -r .tunnels[0].public_url < tunnels.json | sed 's/tcp:\/\///')
-        HOST=$(echo $TUNNEL_URL | cut -d':' -f1)
-        PORT=$(echo $TUNNEL_URL | cut -d':' -f2)
-        echo "Ngrok Tunnel: $HOST:$PORT"
-        echo "$HOST $PORT" > ngrok_target.txt
+      - name: Fetch Ngrok URL
+        run: |
+          NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r .tunnels[0].public_url)
+          echo "Ngrok Tunnel URL: $NGROK_URL"
+          echo $NGROK_URL > ngrok_url.txt
 
-    - name: Configure HAProxy to tunnel to Ngrok
-      run: |
-        read HOST PORT < ngrok_target.txt
-        sudo bash -c "cat > /etc/haproxy/haproxy.cfg" <<EOF
-global
-    daemon
-    maxconn 256
+      - name: Check Ngrok URL format
+        run: |
+          NGROK_URL=$(cat ngrok_url.txt)
+          echo "DEBUG: Ngrok URL is: $NGROK_URL"
+          if [[ ! "$NGROK_URL" =~ ^[a-zA-Z0-9.-]+:[0-9]+$ ]]; then
+            echo "ERROR: Invalid Ngrok URL format!"
+            exit 1
+          fi
 
-defaults
-    mode http
-    timeout connect 5s
-    timeout client  10s
-    timeout server  10s
+      - name: Test Tunnel to Google.com via Proxy
+        run: |
+          echo "Testing Proxy Tunnel..."
+          curl -x http://localhost:8080 http://google.com -L -m 10 -v || echo "Test failed"
 
-frontend proxy-in
-    bind *:80
-    default_backend tunnel
-
-backend tunnel
-    server ngrok_proxy $HOST:$PORT
-EOF
-        sudo systemctl restart haproxy
-
-    - name: Test HTTP proxy via Ngrok/HAProxy
-      run: |
-        echo "Testing proxy through HAProxy → Ngrok → Python HTTP Server"
-        curl -x http://localhost:80 http://localhost:8080 -m 10 -v || echo "Test failed"
-        
+      - name: Keep Alive
+        run: |
+          while sleep 60; do echo "Running..."; done
+          
