--- a/.github/workflows/Try1.yml
+++ b/.github/workflows/Try1.yml
@@ -23,11 +23,12 @@ jobs:
           echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
           sudo apt update && sudo apt install ngrok -y
 
-      - name: Start Ngrok TCP Tunnel
-        env:
-          NGROK_AUTHTOKEN: ${{ secrets.NGROK_AUTHTOKEN }}
+      - name: Configure Ngrok Authtoken
         run: |
-          ngrok config add-authtoken $NGROK_AUTHTOKEN
+          ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
+        
+      - name: Start Ngrok TCP Tunnel
+        run: |
           nohup ngrok tcp 8080 > ngrok.log 2>&1 &
           sleep 5
 
