--- a/.github/workflows/Try1.yml
+++ b/.github/workflows/Try1.yml
@@ -1,55 +1,79 @@
-name: Setup Ngrok Tunnel
+name: Setup Ngrok Tunnel with HAProxy
 
 on:
-  workflow_dispatch:  # Allows manual trigger of the workflow from GitHub UI
+  workflow_dispatch:
 
 jobs:
-  setup-ngrok:
+  setup-tunnel:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 360
 
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
-
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y curl jq
+          sudo apt install -y jq curl ngrok haproxy
 
-      - name: Install Ngrok
+      - name: Add Ngrok Authtoken
         run: |
-          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-          sudo apt update && sudo apt install ngrok -y
+          ngrok config add-authtoken $NGROK_AUTHTOKEN
+          echo "Ngrok Authtoken added successfully."
 
-      - name: Configure Ngrok Authtoken
-        run: |
-          ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
-        
       - name: Start Ngrok TCP Tunnel
         run: |
-          nohup ngrok tcp 8080 > ngrok.log 2>&1 &
+          ngrok tcp 8080 > ngrok.log 2>&1 &
           sleep 5
-
-      - name: Fetch Ngrok URL
-        run: |
+          
+          # Fetch the Ngrok URL (TCP format)
           NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r .tunnels[0].public_url)
+          
+          # Check if Ngrok URL is fetched correctly
+          if [ -z "$NGROK_URL" ]; then
+            echo "ERROR: Ngrok URL could not be retrieved."
+            cat ngrok.log
+            exit 1
+          fi
+          
           echo "Ngrok Tunnel URL: $NGROK_URL"
-          echo $NGROK_URL > ngrok_url.txt
+          
+          # Remove the 'tcp://' prefix for HAProxy use
+          CLEAN_NGROK_URL=$(echo $NGROK_URL | sed 's/tcp:\/\///')
+          echo $CLEAN_NGROK_URL > ngrok_url.txt
 
       - name: Check Ngrok URL format
         run: |
           NGROK_URL=$(cat ngrok_url.txt)
           echo "DEBUG: Ngrok URL is: $NGROK_URL"
-          if [[ ! "$NGROK_URL" =~ ^[a-zA-Z0-9.-]+:[0-9]+$ ]]; then
+          
+          # Remove the 'tcp://' prefix for validation
+          CLEAN_NGROK_URL=$(echo $NGROK_URL | sed 's/tcp:\/\///')
+          
+          # Validate the Ngrok URL format (expecting 'host:port')
+          if [[ ! "$CLEAN_NGROK_URL" =~ ^[a-zA-Z0-9.-]+:[0-9]+$ ]]; then
             echo "ERROR: Invalid Ngrok URL format!"
             exit 1
           fi
 
-      - name: Test Tunnel to Google.com via Proxy
+      - name: Configure HAProxy with Ngrok URL
         run: |
-          echo "Testing Proxy Tunnel..."
+          NGROK_URL=$(cat ngrok_url.txt)
+          echo "Configuring HAProxy with Ngrok URL: $NGROK_URL"
+          
+          # Backup original haproxy.cfg
+          sudo cp /etc/haproxy/haproxy.cfg /etc/haproxy/haproxy.cfg.backup
+          
+          # Update HAProxy config to forward to Ngrok
+          sudo bash -c "echo 'frontend http-in
+          bind *:8080
+          default_backend http-proxy
+          backend http-proxy
+          server proxy1 $NGROK_URL' > /etc/haproxy/haproxy.cfg"
+          
+          # Restart HAProxy to apply the changes
+          sudo service haproxy restart
+
+      - name: Test Tunnel to Google
+        run: |
           curl -x http://localhost:8080 http://google.com -L -m 10 -v || echo "Test failed"
 
       - name: Keep Alive
