--- a/.github/workflows/masiuuuuin.yml
+++ b/.github/workflows/masiuuuuin.yml
@@ -1,24 +1,33 @@
-name: SSH Tunnel FreeNet
+name: Free SSH Ngrok Tunnel
 
 on:
   workflow_dispatch:
 
 jobs:
-  ssh-tunnel:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Setup Tunnel
-      run: |
-        apt update && apt install -y openssh-server
-        mkdir -p /run/sshd
-        echo 'root:123456' | chpasswd
-        sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
-        /usr/sbin/sshd
-        curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | tee /etc/apt/trusted.gpg.d/ngrok.asc
-        echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | tee /etc/apt/sources.list.d/ngrok.list
-        apt update && apt install -y ngrok
-        ngrok config add-authtoken <TERA_NGROK_AUTHTOKEN>
-        ngrok tcp 22 > ngrok.log &
-        sleep 10
-        cat ngrok.log
-        tail -f /dev/null
+      - name: Setup SSH Server and Ngrok
+        run: |
+          echo "root:123456" | chpasswd
+          apt-get update
+          apt-get install -y openssh-server curl
+          mkdir -p /run/sshd
+          sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+          sed -i 's/Port 22/Port 22/' /etc/ssh/sshd_config
+          /usr/sbin/sshd
+
+          # Install Ngrok
+          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | tee /etc/apt/trusted.gpg.d/ngrok.asc
+          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | tee /etc/apt/sources.list.d/ngrok.list
+          apt-get update && apt-get install -y ngrok
+
+          # Add your token below
+          ngrok config add-authtoken 2eotogA5R4KDNhGM3LPPec0uk9D_5JwsdDjfp5mbogqyAUepa
+          
+          echo "Starting TCP tunnel on port 22"
+          ngrok tcp 22 > ngrok.log &
+          sleep 20
+          echo "Ngrok Tunnel Running. Your SSH details below:"
+          cat ngrok.log
+          tail -f /dev/null
