--- a/.github/workflows/Aain.yml
+++ b/.github/workflows/Aain.yml
@@ -1,52 +1,42 @@
-name: Android 16 Emulator with VNC and Tunnel
+name: WireGuard over Loophole
 
-on:
-  workflow_dispatch: # Manual trigger
+on: workflow_dispatch:
 
-jobs:
-  android-emulator:
-    runs-on: ubuntu-latest
-    env:
-      DISPLAY: :1
-    steps:
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils virt-manager xvfb x11vnc net-tools wget unzip openjdk-11-jdk
+jobs: wireguard-loophole: runs-on: ubuntu-latest steps: - name: Install WireGuard & Tools run: | sudo apt update sudo apt install -y wireguard curl tar
 
-      - name: Setup Android SDK
-        run: |
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip -d $HOME/android-sdk
-          mkdir -p $HOME/android-sdk/cmdline-tools/latest
-          mv $HOME/android-sdk/cmdline-tools/* $HOME/android-sdk/cmdline-tools/latest/
-          export ANDROID_SDK_ROOT=$HOME/android-sdk
-          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
-          yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-          sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-33" "system-images;android-33;google_apis;x86_64" "emulator"
-          sdkmanager --sdk_root=$ANDROID_SDK_ROOT "emulator"
+- name: Generate WireGuard Config
+    run: |
+      mkdir -p wg && cd wg
+      umask 077
+      wg genkey | tee privatekey | wg pubkey > publickey
+      PRIV_KEY=$(cat privatekey)
 
-      - name: Create and start emulator
-        run: |
-          export ANDROID_SDK_ROOT=$HOME/android-sdk
-          export PATH=$ANDROID_SDK_ROOT/emulator:$ANDROID_SDK_ROOT/platform-tools:$PATH
-          echo no | avdmanager create avd -n test -k "system-images;android-33;google_apis;x86_64" --force
-          Xvfb :1 -screen 0 1280x720x24 & # Start virtual framebuffer for GUI
-          emulator -avd test -no-window -gpu swiftshader_indirect -no-audio -no-boot-anim -wipe-data -accel on -no-snapshot-load -no-snapshot-save -port 5554 &
-          adb wait-for-device
-          adb shell input keyevent 82
+      echo "[Interface]" > wg0.conf
+      echo "Address = 10.0.0.1/24" >> wg0.conf
+      echo "ListenPort = 51820" >> wg0.conf
+      echo "PrivateKey = $PRIV_KEY" >> wg0.conf
 
-      - name: Setup x11vnc server to stream emulator screen
-        run: |
-          sudo apt-get install -y x11vnc
-          x11vnc -display :1 -forever -nopw -listen 0.0.0.0 -shared &
+      echo "Public Key for Client:" && cat publickey
 
-      - name: Setup tunnel with localtunnel (alternative to ngrok/playit.gg)
-        run: |
-          npm install -g localtunnel
-          lt --port 5900 --subdomain myandroidemulator$$ & # lt will tunnel VNC default port 5900 to public URL
+  - name: Enable WireGuard
+    run: |
+      sudo wg-quick up wg/wg0.conf
+      sudo wg show
 
-      - name: Keep job alive for max 6 hours
-        run: |
-          echo "Emulator is running. Access VNC at your tunneled address on port 5900."
-          sleep 21600 # sleep for 6 hours
+  - name: Download and Run Loophole Tunnel
+    run: |
+      curl -Lo loophole.tar.gz https://github.com/loophole/cli/releases/download/1.0.0-beta.15/loophole-cli_1.0.0-beta.15_linux_64bit.tar.gz
+      tar -xzf loophole.tar.gz
+      chmod +x loophole
+      echo "Starting tunnel on port 51820..."
+      ./loophole tunnel tcp --port 51820 --hostname wireguard-$(date +%s) &
+      sleep 10
+      echo "Tunnel running."
+
+  - name: Show Active Tunnel and Config Info
+    run: |
+      echo "Your client should connect to the loophole tunnel on port 51820."
+      echo "Use the following public key in your WireGuard phone config:"
+      cat wg/publickey
+      echo "Set allowed IPs to 0.0.0.0/0 and IP as 10.0.0.2/24"
+
