--- a/.github/workflows/mwgloopholeain.yml
+++ b/.github/workflows/mwgloopholeain.yml
@@ -1,60 +1,57 @@
-name: WireGuard + Loophole Tunnel
+name: WireGuard + Loophole Tunnel 24/7
 
 on:
   workflow_dispatch:
 
 jobs:
-  wireguard-tunnel:
+  tunnel:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y wireguard curl tar
+      - name: Install WireGuard & Tools
+        run: |
+          sudo apt update
+          sudo apt install -y wireguard curl tar
 
-    - name: Generate WireGuard keys
-      run: |
-        mkdir -p wg
-        cd wg
-        umask 077
-        wg genkey | tee privatekey | wg pubkey > publickey
+      - name: Generate WireGuard Keys
+        run: |
+          mkdir -p wg
+          cd wg
+          umask 077
+          wg genkey | tee privatekey | wg pubkey > publickey
 
-    - name: Create WireGuard config
-      run: |
-        cd wg
-        PRIV_KEY=$(cat privatekey)
-        cat <<EOF > wg0.conf
-[Interface]
-Address = 10.0.0.1/24
-ListenPort = 51820
-PrivateKey = $PRIV_KEY
-EOF
+      - name: Create WireGuard Server Config
+        run: |
+          cd wg
+          PRIV_KEY=$(cat privatekey)
+          echo "[Interface]" > wg0.conf
+          echo "Address = 10.0.0.1/24" >> wg0.conf
+          echo "ListenPort = 51820" >> wg0.conf
+          echo "PrivateKey = $PRIV_KEY" >> wg0.conf
 
-    - name: Show server public key (for client config)
-      run: |
-        echo "==== SERVER PUBLIC KEY ===="
-        cat wg/publickey
+      - name: Show Server Public Key
+        run: cat wg/publickey
 
-    - name: Start WireGuard interface
-      run: sudo wg-quick up wg/wg0.conf
+      - name: Start WireGuard Server
+        run: sudo wg-quick up wg/wg0.conf
 
-    - name: Download and extract Loophole CLI
-      run: |
-        curl -Lo loophole.tar.gz https://github.com/loophole/cli/releases/download/1.0.0-beta.15/loophole-cli_1.0.0-beta.15_linux_64bit.tar.gz
-        tar -xzf loophole.tar.gz
-        cd loophole-cli_1.0.0-beta.15_linux_64bit
-        chmod +x loophole
+      - name: Download and Extract Loophole
+        run: |
+          curl -Lo loophole.tar.gz https://github.com/loophole/cli/releases/download/1.0.0-beta.15/loophole-cli_1.0.0-beta.15_linux_64bit.tar.gz
+          tar -xzf loophole.tar.gz
+          chmod +x loophole-cli_1.0.0-beta.15_linux_64bit/loophole
 
-    - name: Start Loophole TCP Tunnel on port 51820
-      run: |
-        cd loophole-cli_1.0.0-beta.15_linux_64bit
-        ./loophole tunnel tcp --port 51820 --hostname wireguard-$(date +%s) &
-        sleep 10
+      - name: Start Loophole TCP Tunnel
+        run: |
+          ./loophole-cli_1.0.0-beta.15_linux_64bit/loophole tunnel tcp --port 51820 --hostname wireguard-$(date +%s) &
+          sleep 10
 
-    - name: Show tunnel and WireGuard info
-      run: |
-        echo "=== Loophole TCP Tunnel Running ==="
-        ps aux | grep loophole | grep -v grep
-        echo "=== WireGuard Server Public Key ==="
-        cat wg/publickey
+      - name: Show Tunnel & Server Info
+        run: |
+          echo "=== WireGuard Public Key ==="
+          cat wg/publickey
+          echo "=== Tunnel Process ==="
+          ps aux | grep loophole | grep -v grep
+
+      - name: 🟢 Keep Alive 24/7
+        run: tail -f /dev/null
