--- a/.github/workflows/mwgloopholeain.yml
+++ b/.github/workflows/mwgloopholeain.yml
@@ -1,55 +1,60 @@
-name: WireGuard with Ngrok TCP Tunnel
+name: WireGuard over Ngrok
 
-on: workflow_dispatch:
+on:
+  workflow_dispatch:
 
-jobs: start-wireguard: runs-on: ubuntu-latest
+jobs:
+  tunnel:
+    runs-on: ubuntu-latest
+    steps:
 
-steps:
-  - name: Update & install dependencies
-    run: |
-      sudo apt update
-      sudo apt install -y wireguard curl unzip
+    - name: Install dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y wireguard curl
 
-  - name: Generate WireGuard server keys
-    run: |
-      mkdir -p wg
-      cd wg
-      umask 077
-      wg genkey | tee privatekey | wg pubkey > publickey
+    - name: Generate WireGuard keys
+      run: |
+        mkdir wg
+        cd wg
+        umask 077
+        wg genkey | tee privatekey | wg pubkey > publickey
 
-  - name: Create WireGuard config
-    run: |
-      PRIV_KEY=$(cat wg/privatekey)
-      echo "[Interface]" > wg/wg0.conf
-      echo "Address = 10.0.0.1/24" >> wg/wg0.conf
-      echo "PrivateKey = $PRIV_KEY" >> wg/wg0.conf
-      echo "ListenPort = 51820" >> wg/wg0.conf
+    - name: Create WireGuard config
+      run: |
+        PRIV_KEY=$(cat wg/privatekey)
+        cat <<EOF > wg/wg0.conf
+        [Interface]
+        Address = 10.0.0.1/24
+        PrivateKey = $PRIV_KEY
+        ListenPort = 51820
+        EOF
 
-  - name: Show server public key (for client)
-    run: cat wg/publickey
+    - name: Show Server Public Key
+      run: cat wg/publickey
 
-  - name: Start WireGuard server
-    run: sudo wg-quick up wg/wg0.conf
+    - name: Start WireGuard
+      run: sudo wg-quick up wg/wg0.conf
 
-  - name: Download and install Ngrok
-    run: |
-      curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc > /dev/null
-      echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-      sudo apt update && sudo apt install ngrok
+    - name: Download Ngrok
+      run: |
+        curl -sLo ngrok.zip https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
+        unzip ngrok.zip
+        chmod +x ngrok
 
-  - name: Authenticate Ngrok
-    run: ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+    - name: Start Ngrok TCP Tunnel on 51820
+      run: |
+        ./ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+        nohup ./ngrok tcp 51820 > ngrok.log &
+        sleep 5
+        cat ngrok.log | grep -o 'tcp://[0-9a-zA-Z.:]*'
 
-  - name: Start Ngrok TCP tunnel for WireGuard
-    run: nohup ngrok tcp 51820 > ngrok.log &
+    - name: Show Public Key & Tunnel Info
+      run: |
+        echo "=== WireGuard Public Key ==="
+        cat wg/publickey
+        echo "=== Ngrok Tunnel URL ==="
+        curl -s http://127.0.0.1:4040/api/tunnels | grep -o 'tcp://[0-9a-zA-Z.:]*'
 
-  - name: Wait and show Ngrok public TCP address
-    run: |
-      sleep 10
-      curl -s http://127.0.0.1:4040/api/tunnels > tunnels.json
-      cat tunnels.json | grep -Po 'tcp://\K[^\"]+'
-
-  - name: Keep Workflow Alive 24/7
-    run: |
-      while sleep 3600; do echo "💤 still alive..."; done
-
+    - name: Keep Alive
+      run: sleep 86400
