--- a/.github/workflows/mwgloopholeain.yml
+++ b/.github/workflows/mwgloopholeain.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Start Ngrok TCP Tunnel on 51820
       run: |
-        ./ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+        ./ngrok config add-authtoken 2eotogA5R4KDNhGM3LPPec0uk9D_5JwsdDjfp5mbogqyAUepa
         nohup ./ngrok tcp 51820 > ngrok.log &
         sleep 5
         cat ngrok.log | grep -o 'tcp://[0-9a-zA-Z.:]*'
