--- a/.github/workflows/Aain.yml
+++ b/.github/workflows/Aain.yml
@@ -1,4 +1,4 @@
-name: LocalTunnel Proxy Server
+name: Ngrok Proxy Server
 
 on:
   workflow_dispatch:
@@ -11,25 +11,29 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install tinyproxy nodejs npm -y
+          sudo apt install -y tinyproxy curl unzip
 
       - name: Configure Tinyproxy
         run: |
           sudo sed -i 's/^#Allow 127.0.0.1/Allow 0.0.0.0/' /etc/tinyproxy/tinyproxy.conf
           sudo sed -i 's/^Port 8888/Port 8080/' /etc/tinyproxy/tinyproxy.conf
-          echo "AddHeader \"bypass-tunnel-reminder: true\"" | sudo tee -a /etc/tinyproxy/tinyproxy.conf
           sudo systemctl restart tinyproxy
 
-      - name: Install LocalTunnel (older version to avoid auth page)
+      - name: Download Ngrok
         run: |
-          sudo npm install -g localtunnel@2.0.0
+          curl -s https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-linux-amd64.zip -o ngrok.zip
+          unzip ngrok.zip
+          chmod +x ngrok
 
-      - name: Start LocalTunnel (Run for 24 hours)
+      - name: Authenticate Ngrok
         run: |
-          nohup lt --port 8080 --subdomain proxy$RANDOM > lt.log 2>&1 &
+          ./ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+
+      - name: Start Ngrok TCP Tunnel for Tinyproxy
+        run: |
+          nohup ./ngrok tcp 8080 > ngrok.log 2>&1 &
           sleep 10
-          echo "===== LocalTunnel Output Start ====="
-          cat lt.log | head -n 20
-          echo "===== LocalTunnel Output End ====="
-          echo "Tunnel will now run for 24 hours..."
+          echo "===== Ngrok Tunnel Info ====="
+          curl -s http://127.0.0.1:4040/api/tunnels
+          echo "============================="
           sleep 86400
